unpackaged/main/default/objects/API_Connector__Service_Mapping_Setting__c/API_Connector__Service_Mapping_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Service Mapping Setting</label>
</CustomObject>