unpackaged/main/default/objects/API_Connector__Service_Mapping_Setting__c/fields/API_Connector__Output_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Output_Fields_Mapping__c</fullName>
    <label>Output Fields Mapping</label>
    <type>TextArea</type>
</CustomField>