unpackaged/main/default/objects/API_Connector__Service_Mapping_Setting__c/fields/API_Connector__Status_Field__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Status_Field__c</fullName>
    <label>Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>